--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="inner">
       <a id="forkme_banner" href="https://github.com/Alpani/alpani">View on GitHub</a>
       <h1 id="project_title">Alpani</h1>
-      <h2 id="project_tagline">Web site </h2>
+      <h2 id="project_tagline">Modern Web Solutions </h2>
       <!--       <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Alpani/alpani/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/Alpani/alpani/tarball/master">Download this project as a tar.gz file</a>
