--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- HEADER -->
-  <div id="header_wrap" class="outer">
+  <div id="header_wrap" class="outer" align="center">
     <header class="inner">
       <a id="forkme_banner" href="https://github.com/Alpani/alpani">View on GitHub</a>
       <h1 id="project_title">Alpani</h1>
