--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <!-- HEADER -->
-  <div id="header_wrap" class="outer" align="center">
+  <div id="header_wrap" class="outer">
     <header class="inner">
       <a id="forkme_banner" href="https://github.com/Alpani/alpani">View on GitHub</a>
-      <h1 id="project_title">Alpani</h1>
+      <h1 id="project_title">ALPANI</h1>
       <h2 id="project_tagline">Modern Web Solutions </h2>
       <!--       <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Alpani/alpani/zipball/master">Download this project as a .zip file</a>
